# stats-panel

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: build-sensor-helper.ps1  check-release-version.ps1  ensure-pawnio-installer.ps1
sensor-helper/: Program.cs  stats-sensor-helper.csproj
src/: App.css  App.tsx  dashboardGroups.ts  metrics.ts  tauri.ts  theme.ts  types.ts  updates.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  metrics.rs  preferences.rs  providers.rs
src/components/: DashboardView.tsx  SettingsView.tsx  ui.tsx
