[package]
name = "stats-panel"
version = "0.2.28"
description = "A compact Windows performance monitor for a secondary display."
authors = ["cekav"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stats_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stats-panel"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nvml-wrapper = "0.12.1"
sysinfo = "0.39.3"
